--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:    None
-zhihu_username:     NotAGeek
+zhihu_username:     notageek
 github_username:    ClimberPG
 #facebook_username:  None
 #jianshu_username:   e71990ada2fd
