--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     notageek
 github_username:    ClimberPG
 #facebook_username:  None
-#jianshu_username:   e71990ada2fd
+jianshu_username:   9d5b7b0444be
 #twitter_username:   qiubaiying
 
 
